# libPLCL

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: libPLCL.pc.in
examples/: html.p(l)clhtml  reading_config.cpp  reading_template.cpp  simple.p(l)cl  simple.p(l)cltem
include/: Config.hpp  Helper.hpp  Template.hpp  libPLCL.hpp  libPapyrusLikeConfigurationLanguage.hpp
include/libPLCL/: Config.hpp  Generic.hpp  Lexer.hpp  Template.hpp
include/libPapyrusLikeConfigurationLanguage/: Config.hpp  Generic.hpp  Lexer.hpp  Template.hpp
manual/: building-and-installing.md  index.dox
spec/: main.tex
src/: Config.cpp  Lexer.cpp  Template.cpp
